[gd_scene load_steps=6 format=3 uid="uid://urfilus65567"]

[ext_resource type="Theme" uid="uid://b1xfdyvlbbwvk" path="res://game_settings/bestest_theme.tres" id="1_rau11"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_yi8r1"]
[ext_resource type="PackedScene" uid="uid://b2jkbsmq6fwxr" path="res://scenes/ui/UISounds.tscn" id="2_27sfv"]
[ext_resource type="PackedScene" uid="uid://d2lk208ksndml" path="res://scenes/options_menu.tscn" id="3_kaw0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqoq4"]

[node name="PauseMenu" type="CanvasLayer"]

[node name="pause_menu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi8r1")

[node name="UiSounds" parent="pause_menu" instance=ExtResource("2_27sfv")]
root_path = NodePath("../MarginContainer/VBoxContainer")

[node name="Panel" type="Panel" parent="pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_rau11")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Game Paused!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 70
theme_override_styles/separator = SubResource("StyleBoxEmpty_wqoq4")

[node name="Resume" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_rau11")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="VSeparator3" type="VSeparator" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 70
theme_override_styles/separator = SubResource("StyleBoxEmpty_wqoq4")

[node name="Options_menu" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_rau11")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="VSeparator2" type="VSeparator" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 70
theme_override_styles/separator = SubResource("StyleBoxEmpty_wqoq4")

[node name="Exit_to_main_menu" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_rau11")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Exit to map"

[node name="options_menu" parent="pause_menu" instance=ExtResource("3_kaw0a")]
visible = false
layout_mode = 1

[connection signal="pressed" from="pause_menu/MarginContainer/VBoxContainer/Resume" to="pause_menu" method="_on_resume_pressed"]
[connection signal="pressed" from="pause_menu/MarginContainer/VBoxContainer/Options_menu" to="pause_menu" method="_on_options_menu_pressed"]
[connection signal="pressed" from="pause_menu/MarginContainer/VBoxContainer/Exit_to_main_menu" to="pause_menu" method="_on_exit_to_main_menu_pressed"]
